--- a/HTML-CSS/style.css
+++ b/HTML-CSS/style.css
@@ -1,17 +1,68 @@
-p {
-  color: blue;
-  font-size: 18px;
 
-}
-/* ESPECIFICIDADE USANDO ID PESO MAIOR*/
-#A {
-  color: pink;
-  font-size: 30px;
-
+body {
+  font-family: Arial, sans-serif;
+  background-color: #ececec;
+  margin: 0;
+  padding: 0;
 }
 
-h1 {
-  color: red;
-  font-size: 25px;
+form {
+ 
+  width: 400px;
+  margin: 30px 10px ;
+  padding: 30px;
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  
+}
 
+label, input, textarea, button {
+  display: block;
+  width: 100%;
+  margin-bottom: 10px;
+}
+button {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+}
+button:hover {
+  background-color: #45a049;
+}
+
+header, footer {
+  background-color: #105c12;
+  color: white;
+  text-align: center;
+  padding: 10px 0;
+}
+
+nav {
+  background-color: #333;
+  color: white;
+  padding: 20px;
+  text-align: center;
+}
+nav a {
+  color: white;
+  margin: 0 10px;
+  text-decoration: none;
+}
+main {
+  padding: 20px;
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+
+}
+table, th, td {
+  border: 1px solid #ddd;
+}
+th, td {
+  padding: 8px;
+  text-align: left;
 }
