--- a/HTML-CSS/CSS-FLEXBOX/style.css
+++ b/HTML-CSS/CSS-FLEXBOX/style.css
@@ -6,17 +6,17 @@ body {
 }
 .container {
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  height: 100vh;
+  height: 100%;
   background-color: #333;
 }
 .item {
   background-color: #4CAF50;
   color: white;
-  padding: 20px;
-  margin: 10px;
+  padding: 80px;
+  margin: 40px;
   text-align: center;
   flex: 1; /* Cada item ocupa o mesmo espaço */
 }
