--- a/SITE-QUIZZ/style.css
+++ b/SITE-QUIZZ/style.css
@@ -1,25 +1,42 @@
+@import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap');
+
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: #F4F0EA;
-  color: #798252;
-  font-weight: 400;
+    background-color: #F4F0EA;
+    color: #798252;
+    font-family: "Cabin", sans-serif;
+    font-weight: 400;
 }
 
 header {
-  padding: 2rem;
-  background-color: #3a2119;
-  text-align: center;
+    padding: 2rem;
+    background-color: #331F19;
+    text-align: center;
 }
 
 main {
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
 }
+
+section {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+
+h2 {
+  color: #331f19;
+  font-size: 1.2rem;
+}
+ input [type="radio"] {
+   accent-color: #CCD595;
+ }
